# L-port

./: index.html  package-lock.json
.github/skills/frontend/: SKILL.md
.github/skills/frontend-adjustment/: SKILL.md
backend/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  QUICK_REFERENCE.md  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  setup.bat  setup.sh  test_api.py  vercel.json
backend/agent/: rag_agent.py
backend/config/: settings.py
backend/legal_vectors/: chroma.sqlite3
backend/routes/: __init__.py  mail.py  payment.py  rag.py
backend/schemas/: __init__.py
backend/services/: __init__.py  mail.py  payment.py
backend/utils/: __init__.py  email_templates.py  logger.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CorporateAdvisoryServices.tsx  ERSALegalClaude.tsx  ExpertiseModal.tsx  IntellectualPropertyServices.tsx  NRIPropertyServices.tsx  PaymentModal.tsx  TermsModal.tsx
frontend/src/components/shared/: ChatWidget.tsx  Footer.tsx  NavBar.tsx  ScrollToTop.tsx
frontend/src/hooks/: useIntersectionObserver.ts  useWindowWidth.ts
frontend/src/styles/: base.css
src/: App.tsx  index.css
src/components/: ERSALegal.tsx  ERSALegalClaude.tsx
